# docs/swagger.json
@@ -1714,6 +1714,17 @@
                     "payment"
                 ],
                 "summary": "Link momo wallet to user account",
+                "parameters": [
+                    {
+                        "description": "Link momo wallet request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schemas.LinkMomoRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Link momo wallet response",
@@ -3803,6 +3814,20 @@
                 },
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "schemas.LinkMomoRequest": {
+            "type": "object",
+            "required": [
+                "walletPhoneNumber"
+            ],
+            "properties": {
+                "walletPhoneNumber": {
+                    "description": "Different from phoneNumber that is used for login\nThis is the phone number that is registered with momo wallet",
+                    "type": "string",
+                    "maxLength": 10,
+                    "minLength": 10
                 }
             }
         },
